// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Dashboard should render component correctly 1`] = `
<div
  className="col-12 col-md-8 mt-3"
>
  <div
    className="m-2"
  >
    <div
      className="top-bar row ml-2 ml-md-0"
    >
      <div
        className="col pl-md-5 pl-2 d-flex justify-content-center flex-column"
      >
        <h2
          className="align-self-center"
        >
          Question(s) posted
        </h2>
        <p
          className="align-self-center"
        >
          0
        </p>
      </div>
      <div
        className="col pl-md-5 pl-2 d-flex justify-content-center flex-column"
      >
        <h2
          className="align-self-center"
        >
          Question(s) commented
        </h2>
        <h3
          className="align-self-center"
        >
          0
        </h3>
      </div>
    </div>
    <div
      className="bottom-tabs mt-5 col-12 col-md-12"
    >
      <h3
        className="mt-5 mb-5"
      >
        Upcoming Meetups for you
      </h3>
      <div
        className="row ml-1 ml-md-0"
      >
        <div
          className="col-12 col-md-12"
        >
          <UpcomingLoader />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`User Dashboard should render when loading is false 1`] = `
<div
  className="col-12 col-md-8 mt-3"
>
  <div
    className="m-2"
  >
    <div
      className="top-bar row ml-2 ml-md-0"
    >
      <div
        className="col pl-md-5 pl-2 d-flex justify-content-center flex-column"
      >
        <h2
          className="align-self-center"
        >
          Question(s) posted
        </h2>
        <p
          className="align-self-center"
        >
          0
        </p>
      </div>
      <div
        className="col pl-md-5 pl-2 d-flex justify-content-center flex-column"
      >
        <h2
          className="align-self-center"
        >
          Question(s) commented
        </h2>
        <h3
          className="align-self-center"
        >
          0
        </h3>
      </div>
    </div>
    <div
      className="bottom-tabs mt-5 col-12 col-md-12"
    >
      <h3
        className="mt-5 mb-5"
      >
        Upcoming Meetups for you
      </h3>
      <div
        className="row ml-1 ml-md-0"
      >
        <PlainCard
          date="May 30 at 10:35 am"
        />
        <PlainCard
          date="May 30 at 10:35 am"
        />
      </div>
    </div>
  </div>
</div>
`;
